--- a/package.json
+++ b/package.json
@@ -4,13 +4,30 @@
   "private": true,
   "homepage": "https://skazzp.github.io/petly-front/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.4",
+    "react-responsive": "^9.0.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "react-select": "^5.5.2",
+    "react-switch": "^7.0.0",
+    "react-toastify": "^9.0.8",
+    "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.6",
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
