--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
   },
