registration formik select city.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://skazzp.github.io/petly-front/",
   "dependencies": {
+    "@emotion/styled": "^11.10.5",
+    "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -13,6 +15,7 @@
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-confetti": "^6.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
@@ -20,7 +23,7 @@
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "react-select": "^5.5.2",
+    "react-select": "^5.7.0",
     "react-switch": "^7.0.0",
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
