--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.2",
