--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.7.1",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
@@ -33,7 +34,8 @@
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.3",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
