--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "hamburger-react": "^2.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-confetti": "^6.1.0",
