--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-confetti": "^6.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^12.1.1",
     "react-icons": "^4.7.1",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-loader-spinner": "^5.3.4",
