--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-toastify": "^9.0.8",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.3",
