--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "hamburger-react": "^2.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-confetti": "^6.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-gallery-carousel": "^0.3.0",
     "react-i18next": "^12.1.1",
     "react-icons": "^4.7.1",
     "react-input-mask": "^3.0.0-alpha.2",
