--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.1.0",
     "react-i18next": "^12.1.1",
     "react-icons": "^4.7.1",
+    "react-image-gallery": "^1.2.11",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
