--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "https://exemple-chat-back.onrender.com",
   "browserslist": {
     "production": [
       ">0.2%",
