--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "https://exemple-chat-back.onrender.com",
   "browserslist": {
     "production": [
       ">0.2%",
